Change Authorization object to be of type User so it works with the authorization server